--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,19 @@
           <version>${dropwizard.version}</version>
       </dependency>
 
+      <dependency>
+          <groupId>org.jsoup</groupId>
+          <artifactId>jsoup</artifactId>
+          <version>1.7.3</version>
+      </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
   </dependencies>
 
     <build>
