--- a/nfl-config.yml
+++ b/nfl-config.yml
@@ -1,3 +1,9 @@
 server:
   type: default
   maxThreads: 1024
+
+  # the key needs to match the suffix of the renderer
+  #viewRendererConfiguration:
+  #   .ftl:
+  #    strict_syntax: yes
+  #    whitespace_stripping: yes
