--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.github.russ4stall</groupId>
   <artifactId>New-Found-Lory</artifactId>
-  <version>1.0</version>
+  <version>1.1</version>
   <packaging>jar</packaging>
 
   <name>New-Found-Lory</name>
@@ -20,6 +20,12 @@
       <dependency>
           <groupId>io.dropwizard</groupId>
           <artifactId>dropwizard-core</artifactId>
+          <version>${dropwizard.version}</version>
+      </dependency>
+
+      <dependency>
+          <groupId>io.dropwizard</groupId>
+          <artifactId>dropwizard-views-freemarker</artifactId>
           <version>${dropwizard.version}</version>
       </dependency>
 
